FIX first set of issues from the broken links file

--- a/docs/de-de/modules/daten/pages/customernewsletter.adoc
+++ b/docs/de-de/modules/daten/pages/customernewsletter.adoc
@@ -5,7 +5,7 @@
 :id: 0EUDZWC
 :author: team-crm
 
-Mit dem Datenformat *CustomerNewsletter* exportierst du Daten von Kunden, die für den Bezug von Newslettern eingetragen sind. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Mit dem Datenformat *CustomerNewsletter* exportierst du Daten von Kunden, die für den Bezug von Newslettern eingetragen sind. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
