--- a/docs/de-de/modules/daten/pages/itemimage.adoc
+++ b/docs/de-de/modules/daten/pages/itemimage.adoc
@@ -1,11 +1,11 @@
-= ItemImage
+xref:daten:alte-tools-daten-exportieren.adoc= ItemImage
 :page-index: false
 :id: LQK63HJ
 :author: team-item
 
 Mit dem Datenformat **ItemImage** exportierst du Artikelbilder.
 Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**.
-Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -63,7 +63,7 @@ Wird keine Position gesetzt, wird beim Import die nächsthöchste Position verwe
 
 | **ItemImageDelete**
 | **1** = Artikelbild löschen +
-Löscht Artikelbild unwiederbringlich, wenn der Wert 1 eingegeben wird. Weitere Informationen zu Filtern, siehe Handbuchseite xref:daten:daten-exportieren.adoc#20[Daten exportieren].
+Löscht Artikelbild unwiederbringlich, wenn der Wert 1 eingegeben wird. Weitere Informationen zu Filtern, siehe Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#20[Daten exportieren].
 |
 
 | **VariationLink**
@@ -80,7 +80,7 @@ Die folgenden Pflichtfelder müssen für das Datenformat **ItemImage** vorhanden
 
 == Übersicht der Abgleichfelder
 
-Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die **Importaktion** die Option **Abgleich** gewählt werden. Die anderen Datenfelder können zusätzlich zum Abgleich verwendet werden. Alternative Abgleichfelder sind mit einem **A** gekennzeichnet.
+Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die **Importaktion** die Option **Abgleich** gewählt werden. Die anderen Datenfelder können zusätzlich zum Abgleich verwendet werden. Alternative Abgleichfelder sind mit einem **A** gekennzeichnet.
 
 .Datenfelder mit Einstellung auf die Option **Abgleich**
 [cols="1,3,3"]
