--- a/docs/de-de/modules/daten/pages/itemlistingmarkethistory.adoc
+++ b/docs/de-de/modules/daten/pages/itemlistingmarkethistory.adoc
@@ -4,12 +4,13 @@
 :id: AFLYNB6
 :author: team-plenty-channel
 
-Das Datenformat *ItemListingMarketHistory* wird verwendet, um aktive Listings zu exportieren. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Das Datenformat *ItemListingMarketHistory* wird verwendet, um aktive Listings zu exportieren. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
 Tabelle 1 erläutert die Datenfelder des Datenformats *ItemListingMarketHistory* in alphabetischer Reihenfolge sowie die Filteroptionen, die du im Tab *Filter* des Datenformats vornimmst.
 
+.Datenfelder des Datenformats *ItemListingMarketHistory*
 [cols="1,3,3"]
 |===
 |Feldname |Erläuterung |Filter
@@ -111,5 +112,3 @@ Mit dem Operator *Zeitraum* ist ein Datumsbereich möglich.
 |Identifikationsnummer
 |Filter aktivieren, Operator wählen und Wert eingeben.
 |===
-
-__Tab. 1: Datenfelder des Datenformats *ItemListingMarketHistory*__
