--- a/docs/de-de/modules/daten/pages/orderlistforfulfillment.adoc
+++ b/docs/de-de/modules/daten/pages/orderlistforfulfillment.adoc
@@ -4,7 +4,7 @@
 :id: 9DUAHIW
 :author: team-order-core
 
-Mit dem Datenformat **OrderListForFulfillment** exportierst du Auftragsdaten für Fulfillmentprozesse, z.B. für Lieferanschriftenlisten. Dieses Datenformat steht ausschließlich für den Export zur Verfügung. Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Mit dem Datenformat **OrderListForFulfillment** exportierst du Auftragsdaten für Fulfillmentprozesse, z.B. für Lieferanschriftenlisten. Dieses Datenformat steht ausschließlich für den Export zur Verfügung. Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
