--- a/docs/de-de/modules/daten/pages/variationcategories.adoc
+++ b/docs/de-de/modules/daten/pages/variationcategories.adoc
@@ -9,7 +9,7 @@ Das Datenformat **VariationCategories** ist jedoch besonders geeignet, um Mehrfa
 Verwende das Format **VariationCategories** z.B. um neu importierte Varianten einfach und schnell mit Kategorieverknüpfungen zu versehen. Nachdem du die neuen Varianten importiert hast, exportierst du die Kategorieverknüpfungen deiner Varianten. Füge dann in der CSV-Datei bei den neuen Varianten die Werte für die Kategorieverknüpfungen für den Import hinzu.
 
 Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**.
-Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
