--- a/docs/de-de/modules/daten/pages/campaigncoupon.adoc
+++ b/docs/de-de/modules/daten/pages/campaigncoupon.adoc
@@ -4,7 +4,7 @@
 :id: KNP2JHY
 :author: team-crm
 
-Mit dem Datenformat *CampaignCoupon* exportierst und bearbeitest du im Menü xref:auftraege:gutscheine.adoc#[Aufträge » Gutscheine] gespeicherte Gutschein-Codes und die dort erstellten Gutscheinkampagnen. Du kannst dann per Importfunktion zeitsparend weitere eigene (nicht von plentymarkets erzeugte) Gutschein-Codes einer Kampagne hinterlegen, die du andernfalls einzeln im Menü anlegen müsstest. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Mit dem Datenformat *CampaignCoupon* exportierst und bearbeitest du im Menü xref:auftraege:gutscheine.adoc#[Aufträge » Gutscheine] gespeicherte Gutschein-Codes und die dort erstellten Gutscheinkampagnen. Du kannst dann per Importfunktion zeitsparend weitere eigene (nicht von plentymarkets erzeugte) Gutschein-Codes einer Kampagne hinterlegen, die du andernfalls einzeln im Menü anlegen müsstest. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
