--- a/docs/de-de/modules/daten/pages/category.adoc
+++ b/docs/de-de/modules/daten/pages/category.adoc
@@ -4,12 +4,8 @@
 :author: team-item
 
 Mit dem Datenformat **Category** exportierst du deine Artikelkategorien.
-//Mit dem Datenformat **Category** legst du Artikelkategorien an oder bearbeitest sie.
-//Das Datenformat ist besonders zum Übersetzen von Kategorien geeignet.
-//Exportiere zur Übersetzung von Deutsch nach Englisch z.B. alle Kategorien in der Sprache **de**.
-//Übersetze dann die Kategorienamen und ändere dabei den Wert in der Spalte **lang** in die gewünschte Sprache, z.B. **en**, bevor du die Datei wieder importierst.
 Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**.
-Wie du das Datenformat exportierst, ist auf die Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Wie du das Datenformat exportierst, ist auf die Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -149,7 +145,7 @@ Die folgenden Pflichtfelder müssen für das Datenformat **Category** vorhanden 
 
 == Übersicht der Abgleichfelder
 
-Die in <<tabelle-datenformat-category-abgleich>> aufgelisteten Datenfelder stehen zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die **Importaktion** die Option **Abgleich** gewählt werden.
+Die in <<tabelle-datenformat-category-abgleich>> aufgelisteten Datenfelder stehen zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die **Importaktion** die Option **Abgleich** gewählt werden.
 
 [[tabelle-datenformat-category-abgleich]]
 .Datenfelder mit Einstellung auf die Option **Abgleich**
