--- a/docs/de-de/modules/daten/pages/customernote.adoc
+++ b/docs/de-de/modules/daten/pages/customernote.adoc
@@ -5,7 +5,7 @@
 :id: LX4Y5WC
 :author: team-crm
 
-Mit dem Datenformat *CustomerNote* exportierst du Notizen, die in Kundendaten erstellt wurden. Notizen befinden sich im gleichnamigen Tab in den Kundendaten. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Mit dem Datenformat *CustomerNote* exportierst du Notizen, die in Kundendaten erstellt wurden. Notizen befinden sich im gleichnamigen Tab in den Kundendaten. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -54,7 +54,7 @@ Die folgenden Pflichtfelder müssen für das Datenformat *CustomerNote* vorhande
 ////
 == Übersicht der Abgleichfelder
 
-Das folgende Datenfeld steht zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Bei diesem Pflichtabgleichfeld muss für die *Importaktion* die Option *Abgleich* gewählt werden.
+Das folgende Datenfeld steht zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Bei diesem Pflichtabgleichfeld muss für die *Importaktion* die Option *Abgleich* gewählt werden.
 
 * *NoteID*
 ////
