--- a/docs/de-de/modules/daten/pages/customerproperty.adoc
+++ b/docs/de-de/modules/daten/pages/customerproperty.adoc
@@ -5,7 +5,7 @@
 :id: OLPLJWR
 :author: team-crm
 
-Mit dem Datenformat *CustomerProperty* exportierst du die im Menü xref:crm:kontakte-verwalten.adoc#4000[Einrichtung » CRM » Eigenschaften] gespeicherten Kundeneigenschaften. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Mit dem Datenformat *CustomerProperty* exportierst du die im Menü xref:crm:kontakte-verwalten.adoc#4000[Einrichtung » CRM » Eigenschaften] gespeicherten Kundeneigenschaften. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -85,7 +85,7 @@ Das folgende Pflichtfeld muss für das Datenformat *CustomerProperty* vorhanden 
 ////
 == Übersicht der Abgleichfelder
 
-Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (*P*) muss für die *Importaktion* die Option *Abgleich* gewählt werden. Alternative Abgleichfelder sind mit einem *A* gekennzeichnet.
+Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (*P*) muss für die *Importaktion* die Option *Abgleich* gewählt werden. Alternative Abgleichfelder sind mit einem *A* gekennzeichnet.
 
 .Datenfelder mit Einstellung auf die Option *Abgleich*
 [cols="1,3,3"]
