--- a/docs/de-de/modules/daten/pages/ebaypartsfitment.adoc
+++ b/docs/de-de/modules/daten/pages/ebaypartsfitment.adoc
@@ -7,7 +7,7 @@
 
 Mit dem Datenformat *EbayPartsFitment* verknüpfst du die Daten einer xref:maerkte:ebay-einrichten.adoc#1600[Fahrzeugverwendungsliste] mit einem eBay-Listing. Für jede drei eBay-Plattformen *Deutschland*, *UK* und *USA* gibt es ein eigenes Datenformat: *EbayPartsFitmentDE*, *EbayPartsFitmentUK* und *EbayPartsFitmentCOM*.
 
-Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -19,6 +19,7 @@ Für jede der drei eBay-Plattformen *Deutschland*, *UK* und *USA* gibt es ein ei
 
 Mit dem Datenformat *EbayPartsFitmentDE* verknüpfst du die Daten einer xref:maerkte:ebay-einrichten.adoc#1600[Fahrzeugverwendungsliste] mit einem eBay-Listing für eBay Deutschland. Tabelle 1 erläutert die Datenfelder des Datenformats link:http://pages.ebay.de/help/sell/contextual/master-vehicle-list-manually.html[EbayPartsFitmentDE^] in alphabetischer Reihenfolge.
 
+.Datenfelder des Datenformats *EbayPartsFitmentDE*
 [cols="1,3,3"]
 |===
 |Feldname |Feld eBay |Erläuterung
@@ -102,12 +103,11 @@ Alle anderen Felder werden für diese Zeile beim Import ignoriert.
 |Market-Listing-ID
 |===
 
-__Tab. 1: Datenfelder des Datenformats *EbayPartsFitmentDE*__
-
 === Datenformat EbayPartsFitmentUK
 
 Mit dem Datenformat *EbayPartsFitmentUK* verknüpfst du die Daten einer xref:maerkte:ebay-einrichten.adoc#1600[Fahrzeugverwendungsliste] mit einem eBay-Listing für eBay UK. Tabelle 2 erläutert die Datenfelder des Datenformats link:http://pages.ebay.co.uk/help/sell/contextual/master-vehicle-list-manually.html[EbayPartsFitmentUK^] in alphabetischer Reihenfolge.
 
+.Datenfelder Datenformats *EbayPartsFitmentUK*
 [cols="1,3"]
 |===
 |Feldname |Erläuterung
@@ -176,12 +176,11 @@ Alle anderen Felder werden für diese Zeile beim Import ignoriert.
 |Market-Listing-ID
 |===
 
-__Tab. 2: Datenfelder Datenformats *EbayPartsFitmentUK*__
-
 === Datenformat EbayPartsFitmentCOM
 
 Mit dem Datenformat *EbayPartsFitmentCOM* verknüpfst du die Daten einer xref:maerkte:ebay-einrichten.adoc#1600[Fahrzeugverwendungsliste] mit einem eBay-Listing für eBay USA. Tabelle 3 erläutert die Datenfelder des Datenformats link:http://pages.ebay.com/motors/compatibility/download.html[EbayPartsFitmentCOM^] in alphabetischer Reihenfolge.
 
+.Datenfelder des Datenformats *EbayPartsFitmentCOM*
 [cols="1,3"]
 |===
 |Feldname |Erläuterung
@@ -244,12 +243,11 @@ Alle anderen Felder werden für diese Zeile beim Import ignoriert.
 |Market-Listing-ID
 |===
 
-__Tab. 3: Datenfelder des Datenformats *EbayPartsFitmentCOM*__
-
 == Übersicht der Abgleichfelder
 
-Die in Tabelle 4 aufgelisteten Datenfelder stehen bei allen drei Datenformaten zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die *Importaktion* die Option *Abgleich* gewählt werden.
+Die in Tabelle 4 aufgelisteten Datenfelder stehen bei allen drei Datenformaten zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die *Importaktion* die Option *Abgleich* gewählt werden.
 
+.Datenfelder mit Einstellung auf die Option *Abgleich*
 [cols="1,3,3"]
 |===
 |Feldname |Erläuterung |Abgleichfeld
@@ -266,5 +264,3 @@ Die in Tabelle 4 aufgelisteten Datenfelder stehen bei allen drei Datenformaten z
 |Market-Listing-ID
 |Alternative zu *EbayPartsFitmentID*
 |===
-
-__Tab. 4: Datenfelder mit Einstellung auf die Option *Abgleich*__
