--- a/docs/de-de/modules/daten/pages/facet.adoc
+++ b/docs/de-de/modules/daten/pages/facet.adoc
@@ -5,7 +5,7 @@
 
 Das Datenformat **Facet** wird für die Bearbeitung von Daten der Facettensuche verwendet.
 Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**.
-Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -19,6 +19,7 @@ Das Datenformat ist nur sichtbar, wenn das Modul Facettensuche gebucht wurde und
 
 Tabelle 1 erläutert die Datenfelder des Datenformats **Facet** in alphabetischer Reihenfolge sowie die Filteroptionen, die du im Tab **Filter** des Datenformats vornimmst.
 
+.Datenfelder des Datenformats **Facet**
 [cols="1,3,3"]
 |===
 |Feldname |Erläuterung |Filter
@@ -99,12 +100,11 @@ Tabelle 1 erläutert die Datenfelder des Datenformats **Facet** in alphabetische
 |Filter aktivieren und Kundenklasse wählen.
 |===
 
-__Tab. 1: Datenfelder des Datenformats **Facet**__
-
 == Übersicht der Abgleichfelder
 
-Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die **Importaktion** die Option **Abgleich** gewählt werden.
+Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die **Importaktion** die Option **Abgleich** gewählt werden.
 
+.Datenfelder mit Einstellung auf die Option **Abgleich**
 [cols="1,3,3"]
 |===
 |Feldname |Erläuterung |Abgleichfeld
@@ -117,5 +117,3 @@ Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importier
 |ID eines Facettenwertes
 |P
 |===
-
-__Tab. 2: Datenfelder mit Einstellung auf die Option **Abgleich**__
