--- a/docs/de-de/modules/daten/pages/itemimagereference.adoc
+++ b/docs/de-de/modules/daten/pages/itemimagereference.adoc
@@ -5,7 +5,7 @@
 
 Mit dem Datenformat **ItemImageReference** exportierst du die Bildverfügbarkeiten von im Tab **Bilder** eines Artikels verknüpften Artikelbildern.
 Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**.
-Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -28,7 +28,7 @@ Tabelle 1 erläutert die Datenfelder des Datenformats **ItemImageReference** in 
 
 | **ItemImageReferenceDelete**
 | **1** = Bildverfügbarkeit löschen +
-Weitere Informationen zu Filtern, siehe Handbuchseite xref:daten:daten-exportieren.adoc#20[Daten exportieren].
+Weitere Informationen zu Filtern, siehe Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#20[Daten exportieren].
 |
 
 | **ItemImageReferenceType**
@@ -53,7 +53,7 @@ Ist als Typ **listing** ausgewählt, ist ItemImageReferenceValue die **ReferrerI
 
 == Übersicht der Abgleichfelder
 
-Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die **Importaktion** die Option **Abgleich** gewählt werden. Die anderen Datenfelder können zusätzlich zum Abgleich verwendet werden. Alternative Abgleichfelder sind mit einem **A** gekennzeichnet.
+Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die **Importaktion** die Option **Abgleich** gewählt werden. Die anderen Datenfelder können zusätzlich zum Abgleich verwendet werden. Alternative Abgleichfelder sind mit einem **A** gekennzeichnet.
 
 .Datenfelder mit Einstellung auf die Option **Abgleich**
 [cols="1,3,3"]
