--- a/docs/de-de/modules/daten/pages/itemlistingmarketricardo.adoc
+++ b/docs/de-de/modules/daten/pages/itemlistingmarketricardo.adoc
@@ -4,7 +4,7 @@
 :id: ZBNTZWF
 :author: team-plenty-channel
 
-Das Datenformat *ItemListingMarketRicardo* wird verwendet, um neue Ricardo-Listings zu erstellen oder bestehende zu bearbeiten, z.B. einzelne Parameter zu ändern oder zu löschen. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Das Datenformat *ItemListingMarketRicardo* wird verwendet, um neue Ricardo-Listings zu erstellen oder bestehende zu bearbeiten, z.B. einzelne Parameter zu ändern oder zu löschen. Du erstellst und exportierst das Datenformat im Menü *Daten » Dynamischer Export*. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -12,6 +12,7 @@ Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht vera
 
 Tabelle 1 erläutert die Datenfelder des Datenformats *ItemListingMarketRicardo* in alphabetischer Reihenfolge sowie die Filteroptionen, die du im Tab *Filter* des Datenformats vornimmst.
 
+.Datenfelder des Datenformats *ItemListingMarketRicardo*
 [cols="1,3,3"]
 |===
 |Feldname |Erläuterung |Filter
@@ -315,12 +316,11 @@ Maximale Anzahl aktiver Listings +
 |Filter aktivieren, Operator wählen und Wert eingeben.
 |===
 
-__Tab. 1: Datenfelder des Datenformats *ItemListingMarketRicardo*__
-
 == Übersicht der Abgleichfelder
 
-Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die *Importaktion* die Option *Abgleich* gewählt werden. Die anderen Datenfelder können zusätzlich zum Abgleich verwendet werden und sind mit einem *A* gekennzeichnet.
+Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die *Importaktion* die Option *Abgleich* gewählt werden. Die anderen Datenfelder können zusätzlich zum Abgleich verwendet werden und sind mit einem *A* gekennzeichnet.
 
+.Datenfelder mit Einstellung auf die Option *Abgleich*
 [cols="1,3,3"]
 |===
 |Feldname |Erläuterung |Abgleichfeld
@@ -353,8 +353,6 @@ Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importier
 |Konto-ID
 |A
 |===
-
-__Tab. 2: Datenfelder mit Einstellung auf die Option *Abgleich*__
 
 [NOTE]
 .Import: Vorgehen bei fehlender Übereinstimmung
