--- a/docs/de-de/modules/daten/pages/order.adoc
+++ b/docs/de-de/modules/daten/pages/order.adoc
@@ -5,7 +5,7 @@
 :id: MFCBRYF
 :author: team-order-core
 
-Mit dem Datenformat **Order** exportierst und bearbeitest du Aufträge. Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Mit dem Datenformat **Order** exportierst und bearbeitest du Aufträge. Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -313,7 +313,7 @@ Wurden mehrere Pakete versendet, können beim Anbieter DHL auch mehrere Paketnum
 
 == Übersicht der Abgleichfelder
 
-Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Eins dieser Pflichtabgleichfelder (P) genügt allerdings für den Abgleich. Wähle daher mindestens eines der Datenfelder.
+Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Eins dieser Pflichtabgleichfelder (P) genügt allerdings für den Abgleich. Wähle daher mindestens eines der Datenfelder.
 
 .Datenfelder mit Einstellung auf die Option **Abgleich**
 [cols="1,3,3"]
