--- a/docs/de-de/modules/daten/pages/ordercomplete.adoc
+++ b/docs/de-de/modules/daten/pages/ordercomplete.adoc
@@ -4,7 +4,7 @@
 :id: 8MBH0FX
 :author: team-order-core
 
-Mit dem Datenformat **OrderComplete** exportierst du Aufträge. Dieses Datenformat steht ausschließlich für den Export zur Verfügung. Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Mit dem Datenformat **OrderComplete** exportierst du Aufträge. Dieses Datenformat steht ausschließlich für den Export zur Verfügung. Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
