--- a/docs/de-de/modules/daten/pages/orderitems.adoc
+++ b/docs/de-de/modules/daten/pages/orderitems.adoc
@@ -5,7 +5,7 @@
 :id: SKXU9KC
 :author: team-order-core
 
-Mit dem Datenformat **OrderItems** exportierst und bearbeitest du die Artikelpositionen eines Auftrags oder fügst neue Positionen zu einem Auftrag hinzu. Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Mit dem Datenformat **OrderItems** exportierst und bearbeitest du die Artikelpositionen eines Auftrags oder fügst neue Positionen zu einem Auftrag hinzu. Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**. Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -148,6 +148,6 @@ Datenfelder beinhalten.
 
 == Übersicht der Abgleichfelder
 
-Das folgende Datenfeld steht zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Bei diesem Pflichtabgleichfeld muss für die **Importaktion** die Option **Abgleich** gewählt werden.
+Das folgende Datenfeld steht zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Bei diesem Pflichtabgleichfeld muss für die **Importaktion** die Option **Abgleich** gewählt werden.
 
 * **RowPositionID** = Positionsnummer der Auftragsposition; fortlaufend
