--- a/docs/de-de/modules/daten/pages/producer.adoc
+++ b/docs/de-de/modules/daten/pages/producer.adoc
@@ -5,7 +5,7 @@
 
 Mit dem Datenformat **Producer** exportierst du Herstellerdaten.
 Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**.
-Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -101,7 +101,7 @@ Tabelle 1 erläutert die Datenfelder des Datenformats **Producer** in alphabetis
 
 == Übersicht der Abgleichfelder
 
-Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die **Importaktion** die Option **Abgleich** gewählt werden. Wähle mindestens eines der Datenfelder aus der Tabelle zum Abgleich.
+Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern (P) muss für die **Importaktion** die Option **Abgleich** gewählt werden. Wähle mindestens eines der Datenfelder aus der Tabelle zum Abgleich.
 
 .Datenfelder mit Einstellung auf die Option **Abgleich**
 [cols="1,3,3"]
