--- a/docs/de-de/modules/daten/pages/variation.adoc
+++ b/docs/de-de/modules/daten/pages/variation.adoc
@@ -5,7 +5,7 @@
 
 Mit dem Datenformat **Variation** exportierst du Variantendaten.
 Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**.
-Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -269,7 +269,7 @@ Der Wert **0** ist voreingestellt; die maximale Bestellmenge ist bei dem Wert **
 [#40]
 == Übersicht der Abgleichfelder
 
-Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Es handelt sich um Wahlpflichtfelder. Es muss mindestens ein Datenfeld aus der folgenden Tabelle für den Abgleich gewählt werden. Beim gewählten Datenfeld muss für die **Importaktion** die Option **Abgleich** gewählt werden.
+Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Es handelt sich um Wahlpflichtfelder. Es muss mindestens ein Datenfeld aus der folgenden Tabelle für den Abgleich gewählt werden. Beim gewählten Datenfeld muss für die **Importaktion** die Option **Abgleich** gewählt werden.
 
 .Datenfelder mit Einstellung auf die Option **Abgleich**
 [cols="1,3"]
