--- a/docs/de-de/modules/daten/pages/variationbarcode.adoc
+++ b/docs/de-de/modules/daten/pages/variationbarcode.adoc
@@ -5,7 +5,7 @@
 
 Das Datenformat **VariationBarcode** wird verwendet, um die im Menü **Einrichtung » Artikel » Barcode** erstellten Barcodes zu exportieren.
 Du erstellst und exportierst das Datenformat im Menü **Daten » Dynamischer Export**.
-Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -45,7 +45,7 @@ Tabelle 1 erläutert die Datenfelder des Datenformats **VariationBarcode** in al
 
 == Übersicht der Abgleichfelder
 
-Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Es handelt sich um Pflichtabgleichfelder. Bei Pflichtabgleichfeldern muss für die **Importaktion** die Option **Abgleich** gewählt werden. Wähle mindestens eines der Datenfelder aus der Tabelle zum Abgleich.
+Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Es handelt sich um Pflichtabgleichfelder. Bei Pflichtabgleichfeldern muss für die **Importaktion** die Option **Abgleich** gewählt werden. Wähle mindestens eines der Datenfelder aus der Tabelle zum Abgleich.
 
 .Datenfelder mit Einstellung auf die Option **Abgleich**
 [cols="1,3"]
