--- a/docs/de-de/modules/daten/pages/variationsupplier.adoc
+++ b/docs/de-de/modules/daten/pages/variationsupplier.adoc
@@ -5,7 +5,7 @@
 
 Einer Variante können Lieferanten zugeordnet werden. Mit dem Datenformat **VariationSupplier** werden die zugehörigen Daten exportiert.
 Du erstellst und eportierst das Datenformat im Menü *Daten » Dynamischer Export*.
-Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:daten-exportieren.adoc#[Daten exportieren] beschrieben.
+Wie du das Datenformat exportierst, ist auf der Handbuchseite xref:daten:alte-tools-daten-exportieren.adoc#[Daten exportieren] beschrieben.
 
 Achte auf die exakte Schreibweise der Datenfelder, da die Daten sonst nicht verarbeitet werden können.
 
@@ -103,7 +103,7 @@ Die folgenden Pflichtfelder müssen für das Datenformat **VariationSupplier** v
 
 == Übersicht der Abgleichfelder
 
-Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:daten-importieren.adoc#25[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern muss für die **Importaktion** die Option **Abgleich** gewählt werden. Die anderen Datenfelder können zusätzlich zum Abgleich verwendet werden. Pflichtabgleichfelder sind mit einem **P** gekennzeichnet.
+Die in Tabelle 2 aufgelisteten Datenfelder stehen zum xref:daten:alte-tools-daten-exportieren.adoc#20[Datenabgleich] zur Verfügung. Bei Pflichtabgleichfeldern muss für die **Importaktion** die Option **Abgleich** gewählt werden. Die anderen Datenfelder können zusätzlich zum Abgleich verwendet werden. Pflichtabgleichfelder sind mit einem **P** gekennzeichnet.
 
 .Datenfelder mit Einstellung auf die Option **Abgleich**
 [cols="1,3,3"]
