--- a/docs/de-de/modules/changelog/pages/2022-06-29.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-06-29.adoc
@@ -6,7 +6,7 @@
 :startWeekDate: 23. Juni 2022
 :endWeekDate: 29. Juni 2022
 
-// Ab diesem Eintrag weitermachen: LINK EINFÜGEN
+// Ab diesem Eintrag weitermachen: https://forum.plentymarkets.com/t/plentyshop-basket-variable-wird-aus-dem-globalcontext-entfernt-basket-variable-is-removed-from-the-globalcontext/685718
 
 Erfahre, was sich in der Woche vom {startWeekDate} bis zum {endWeekDate} bei plentymarkets getan hat. Im Folgenden findest du alle Changelog-Einträge der letzten Woche für stable- und early-Systeme.
 
@@ -48,6 +48,31 @@ Du musst keine weiteren Schritte vornehmen. Alle Einstellungen deines Kaufland-K
 Weitere Informationen findest du auf der Handbuchseite xref:maerkte:kaufland-de-einrichten.adoc#200[Kaufland.de einrichten].
 ======
 
+[discrete]
+=== Prozesse
+
+* In den Prozessen wurden neue Dokumente als Aktion zur Verfügung gestellt. Diese können für die Generierung sowie für den Druck und das Speichern verwendet werden. Die folgenden Dokumente sind nun verfügbar:
+** Externe Gutschrift
+** Externe Rechnung
+** Stornobeleg Mahnung
+** Stornobeleg Gutschrift
+** Stornobeleg Rechnung
+
+'''
+
+[discrete]
+== Geändert
+
+Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
+
+[discrete]
+=== OTTO
+
+:otto-master-date: 24.06.2022
+:otto-master-link: https://forum.plentymarkets.com/uploads/short-url/iv12Ss7JR1TdUGu8nhv0GjUtIgN.xlsx
+
+include::partial$otto-master-file.adoc[]
+
 '''
 
 [discrete]
@@ -71,6 +96,11 @@ Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
 * Im Katalogformat *Warenbestand* werden die Einstellungen zum Dezimaltrennzeichen nun korrekt beachtet.
 
+[discrete]
+=== Prozesse
+
+* Die Subaktion *Speichern* blieb bei einigen Dokumenten bei 92% stehen und der Prozess wurde nicht weiter ausgeführt. Dieser Fehler wurde behoben und betraf nur beta und early.
+
 --
 
 early::
@@ -80,20 +110,24 @@ early::
 :version: early
 
 [discrete]
-== Neu
-
-Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
-
-
-
-'''
-
-[discrete]
 == Geändert
 
 Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
+[discrete]
+=== Artikel
 
+* Wir haben den Bilderupload in der neuen Artikel-UI vereinheitlicht und im gleichen Zug die Buttons zum Umschalten in den Uploadmodus und den Übersetzungsmodus entfernt.
+
+[discrete]
+=== Dokumente
+
+* Wir haben Hinweise hinzugefügt, wie viele Zeichen für den Startwert und den Nummernkreis erlaubt sind. Somit können nicht mehr als die erlaubte Anzahl an Zeichen in den Eingabefelder eingetragen werden.
+
+[discrete]
+=== Prozesse
+
+* In der Auftragssuche / Auftragsauswahl wurde bei den Adressen keine Firma und kein Kundenname angezeigt. Diese werden nun angezeigt, sofern sie in der Adresse angegeben sind.
 
 '''
 
@@ -102,7 +136,25 @@ Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlic
 
 Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
+[discrete]
+=== Aufträge
 
+* In der alten UI wurde für die Auftragsanlage die ausgewählte Herkunft nicht übernommen, wenn eine Auftragsvorlage verwendet wurde.
+
+[discrete]
+=== CRM
+
+* Wenn man im Menü *CRM » Kontakte* zum Beispiel einen Filter für die Kundenklasse und einen für die Kontaktdaten gesetzt hatte, konnte es in manchen Fällen vorkommen, dass die Sortierung der PLZ nicht funktionierte. Dieses Verhalten wurde behoben.
+
+[discrete]
+=== Prozesse
+
+* In der Aktion Retouren anlegen/bearbeiten wurde bei der Artikelauswahl kein GTIN-Code angezeigt. Dieser Fehler wurde behoben.
+
+[discrete]
+=== Warenwirtschaft
+
+* Das Verknüpfung von Lagerorteigenschaften während sie erstellt werden ist nun wieder möglich. Zusätzlich wurde ein Fehler in der Gruppenfunktion zum Verknüpfung dieser Eigenschaften behoben.
 
 --
 
@@ -116,13 +168,60 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|
-|
-|
+|link:https://marketplace.plentymarkets.com/cfourcustomcssjs_5143[Custom CSS/JS im Frontend^]
+|2.0.6
+|-
+
+|link:https://marketplace.plentymarkets.com/etsy_4689[Etsy^]
+|2.1.17
+|-
+
+|link:https://marketplace.plentymarkets.com/formatdesigner_6483[FormatDesigner^]
+|1.3.6
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportidealode_4723[idealo.de^]
+|3.3.32
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexportkaufluxde_4737[kauflux.de^]
+|1.1.10
+|-
+
+|link:https://marketplace.plentymarkets.com/klarna_6731[Klarna^]
+|2.4.5
+|-
+
+|link:https://marketplace.plentymarkets.com/mirakl_6917[Mirakl Connector^]
+|1.1.68
+|-
+
+|link:https://marketplace.plentymarkets.com/novalnet_5231[Novalnet^]
+|2.3.1
+|-
+
+|link:https://marketplace.plentymarkets.com/paypal_4690[PayPal Checkout^]
+|6.0.9
+|-
+
+|link:https://marketplace.plentymarkets.com/shopify_4944[Shopify.com^]
+|2.11.0
+|-
 
 |===
 
 Wenn du dir weitere neue oder aktualisierte Plugins anschauen möchtest, findest du eine link:https://marketplace.plentymarkets.com/plugins?sorting=variation.createdAt_desc&page=1&items=50[Übersicht direkt auf plentyMarketplace^].
+
+--
+
+Dokumentation::
++
+--
+
+[discrete]
+=== Handbuch
+
+* Du kannst ab jetzt auf knowledge.plentymarkets.com und developers.plentymarkets.com zwischen verschiedenen Themes wechseln.
 
 --
 
