FIX more broken links

--- a/docs/de-de/modules/artikel/pages/kategorien.adoc
+++ b/docs/de-de/modules/artikel/pages/kategorien.adoc
@@ -147,7 +147,7 @@ plentyShop und ShopBuilder::
 Neue plentymarkets-Systeme sind mit einem plentyShop und einem ShopBuilder-Tool ausgestattet.
 Mit diesen Tools kannst du ohne HTML- oder CSS-Kenntnisse einen attraktiven Webshop gestalten.
 Es ist nicht nur möglich, die Seiten deiner Website mit ShopBuilder zu erstellen, sondern auch die Kategorien.
-Wenn du also das ShopBuilder-Tool zur Erstellung deines plentyShops verwendest, willst du vielleicht auch xref:webshop:shop-builder.adoc#20[ShopBuilder zur Erstellung deiner Kategorien] verwenden.
+Wenn du also das ShopBuilder-Tool zur Erstellung deines plentyShops verwendest, willst du vielleicht auch xref:webshop:shop-builder.adoc#kategorie-erstellen[ShopBuilder zur Erstellung deiner Kategorien] verwenden.
 
 --
 ====
@@ -407,7 +407,7 @@ Kategorie-Bilder im plentyShop darstellen:
 . Wiederhole ggf. den Vorgang, um ein zweites Kategoriebild auszuwählen. Klicke diesmal auf icon:item_image_selected_2[set=plenty, role="blue"] *Bild 2*.
 . *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
 . Öffne das Menü *CMS » ShopBuilder*.
-. Öffne die xref:webshop:shop-builder.adoc#55[Editor-Ansicht der Kategorie].
+. Öffne die xref:webshop:shop-builder.adoc#editor-ansicht[Editor-Ansicht der Kategorie].
 . Füge das ShopBuilder-Widget xref:webshop:shop-builder.adoc#_hintergrundbild[Bild » Hintergrundbild] hinzu.
 . Öffne die Dropdown-Liste *Hintergrundbild* und wähle die Option *Kategoriebild 1* oder *Kategoriebild 2*.
 . *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
