--- a/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
+++ b/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
@@ -653,7 +653,7 @@ Je nach Platzierung - innerhalb oder außerhalb des Widgets - beziehen sich Arti
 Beispielsweise kannst du ein Bild für das gesamte Set und weitere Bilder für jeden Bestandteil anzeigen.
 
 Wie wird das Layout gestaltet, Widgets hinzugefügt und die Widget-Einstellungen angepasst?
-Diese Informationen findest du auf der xref:webshop:shop-builder.adoc#55[ShopBuilder-Seite des Handbuchs].
+Diese Informationen findest du auf der xref:webshop:shop-builder.adoc#editor-ansicht[ShopBuilder-Seite des Handbuchs].
 
 image::artikel:set-inhalt-gestalten.gif[]
 
