--- a/docs/de-de/modules/artikel/pages/seriennummern.adoc
+++ b/docs/de-de/modules/artikel/pages/seriennummern.adoc
@@ -175,7 +175,7 @@ include::_includes:partial$event-procedure.adoc[]
 [#1200]
 == Seriennummern exportieren
 
-Möchtest du Seriennummern aus deinem plentymarkets System exportieren? Willst du zum Beispiel deinem Hersteller einmal täglich eine Liste aller verwendeten Seriennummern schicken? Nutze dazu den sogenannten xref:daten:FormatDesigner.adoc#[FormatDesigner]! Genauer gesagt, verwende xref:daten:artikel.adoc#500[ItemSerialNumber] innerhalb des Artikel-Formattyps.
+Möchtest du Seriennummern aus deinem plentymarkets System exportieren? Willst du zum Beispiel deinem Hersteller einmal täglich eine Liste aller verwendeten Seriennummern schicken? Nutze dazu den sogenannten xref:daten:FormatDesigner.adoc#[FormatDesigner]! Genauer gesagt, verwende xref:daten:formatdesigner-artikel.adoc#500[ItemSerialNumber] innerhalb des Artikel-Formattyps.
 
 [#1300]
 == Retouren mit Seriennummern annehmen
