--- a/docs/de-de/modules/artikel/pages/suchleiste.adoc
+++ b/docs/de-de/modules/artikel/pages/suchleiste.adoc
@@ -33,7 +33,7 @@ Jede Art von Suchergebnis ist ein ShopBuilder-Widget, das du zu deinem Shop-Layo
 Suchleiste mit Widgets zusammenstellen:
 
 . Öffne das Menü *CMS » ShopBuilder*.
-. Öffne das xref:webshop:shop-builder.adoc#32[Header-Element].
+. Öffne das xref:webshop:shop-builder.adoc#inhalte-header-footer[Header-Element].
 . Klicke auf die Lupe, um den Bereich für Such-Widgets zu öffnen (siehe GIF).
 . Füge bei Bedarf ein Raster mit mehreren Spalten hinzu.
 . Füge einige oder alle der folgenden Widgets ein:
