--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -631,7 +631,7 @@ include::partial$amazon-fba.adoc[]
 
 | *Versandprofile*
 |Wähle (icon:check-square[role="blue"]) mindestens ein xref:fulfillment:versand-vorbereiten.adoc#1000[Versandprofil] pro Artikel. Andernfalls könnten die Versandkosten falsch berechnet werden. Standardmäßig ist kein Versandprofil aktiviert.
-Wenn ein Auftrag Artikel enthält, bei denen kein Versandprofil aktiviert wurde, wird xref:webshop:ceres-einrichten.adoc#260[das Standard-Versandprofil aus dem Standard-Webshop] für die Artikel verwendet. Wenn kein Standard-Versandprofil festgelegt ist, wird das Versandprofil mit der höchsten Priorität verwendet.
+Wenn ein Auftrag Artikel enthält, bei denen kein Versandprofil aktiviert wurde, wird xref:webshop:ceres-einrichten.adoc#plentyshop-assistent-standardeinstellungen[das Standard-Versandprofil aus dem Standard-Webshop] für die Artikel verwendet. Wenn kein Standard-Versandprofil festgelegt ist, wird das Versandprofil mit der höchsten Priorität verwendet.
 
 |===
 
