--- a/docs/de-de/modules/artikel/pages/attribute.adoc
+++ b/docs/de-de/modules/artikel/pages/attribute.adoc
@@ -193,8 +193,8 @@ Siehe anhand eines xref:artikel:import.adoc#[praktischen Beispiels mit Video], w
 [TIP]
 .Attribute können auch exportiert werden
 ====
-* Verwende den Formattyp xref:daten:attribute.adoc#[Attribute], um Informationen zu den Attributen und Attributwerten zu exportieren.
-* Verwende den Formattyp xref:daten:artikel.adoc#900[Artikel / VariationAttributeValues], um zu sehen, welche Attributwerte mit einer bestimmten Variante verknüpft sind.
+* Verwende den Formattyp xref:daten:formatdesigner-attribute.adoc#[Attribute], um Informationen zu den Attributen und Attributwerten zu exportieren.
+* Verwende den Formattyp xref:daten:formatdesigner-artikel.adoc#900[Artikel / VariationAttributeValues], um zu sehen, welche Attributwerte mit einer bestimmten Variante verknüpft sind.
 ====
 
 [#300]
