limango - customer requests - DE

--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -743,7 +743,7 @@ Vorschau im Katalog erstellen:
 → Im Fenster *Vorschau* wird eine Vorschau der ersten 5 Datenzeilen des Exports angezeigt.
 . Prüfe die Daten. Wurden die Daten so exportiert, wie du es erwartest?
 . *_Optional_*: Klicke auf *Daten herunterladen* (icon:file_download[set=material]). +
-→ Eine CSV-Datei mit den ersten 5 Datenzeilen kann auf deinem Rechner gespeichert werden.
+→ Eine Datei mit den ersten 5 Datenzeilen kann auf deinem Rechner gespeichert werden.
 //end::catalogue-preview[]
 --
  
@@ -764,7 +764,7 @@ Vorschau in Katalogübersicht erstellen:
 → Im Fenster *Vorschau* wird eine Vorschau der ersten 5 Datenzeilen des Exports angezeigt.
 . Prüfe die Daten. Wurden die Daten so exportiert, wie du es erwartest?
 . *_Optional_*: Klicke auf *Daten herunterladen* (icon:file_download[set=material]). +
-→ Eine CSV-Datei mit den ersten 5 Datenzeilen kann auf deinem Rechner gespeichert werden.
+→ Eine Datei mit den ersten 5 Datenzeilen kann auf deinem Rechner gespeichert werden.
 
 --
 ====
