--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -31,7 +31,7 @@ Nachdem du das Plugin installiert und eingerichtet hast, stehen die in <<#datena
 |Daten |Intervall
 
 | Artikelexport
-| einmal alle 4 Stunden
+| einmal alle 4 Stunden, wenn eine Änderung am Artikel oder am Katalog stattgefunden hat
 
 | Bestandsabgleich
 | stündlich +
@@ -269,8 +269,6 @@ etc.)
 | Für alle Textilerzeugnisse mit einem Gewichtsanteil an Textilfasern von mindestens 80 % ist die Materialangabe in Prozent rechtlich verpflichtend.
 
 Materialangaben werden mit Eigenschaften des Typs *Text* zu limango exportiert. Erstelle für jedes Marktplatz-Datenfeld eine eigene Eigenschaft.
-
-Der Name dieser Eigenschaften muss mit den von limango erlaubten Werten für die Materialkomponenten übereinstimmen:
 
 * link:https://raw.githubusercontent.com/plentymarkets/manual/master/de/maerkte/assets/limango-material-composite-types.txt[Gültige Werte für Materialkomponenten^]{nbsp}icon:external-link[]
 
@@ -595,11 +593,11 @@ include::partial$limango-recommended-mappings.adoc[]
 include::partial$catalogue-filters.adoc[]
 
 [#preview]
-=== NEU: Vorschau der Exportdaten erstellen (_optional_)
+=== Vorschau der Exportdaten erstellen (_optional_)
 
-Nachdem du alle Datenfelder zugeordnet hast, kannst du die ersten fünf Datenzeilen des Exports über die Vorschaufunktion testen.
+Nachdem du alle Datenfelder zugeordnet hast, kannst du die ersten fünf Produkte des Exports über die Vorschaufunktion prüfen.
 
-include::daten:page$standardformate-exportieren.adoc[tag=catalogue-preview]
+include::partial$catalogue-preview.adoc[]
 
 [#904]
 === Katalog aktivieren
@@ -923,7 +921,6 @@ NOTE: Deine Varianten wurden nicht zu limango exportiert? Wenn mindestens eine V
 include::partial$logs_abrufen.adoc[tag=data-log-intro]
 
 * *Integration* » *limango*
-* *Referenztyp* » *ItemId*
 
 include::partial$logs_abrufen.adoc[tag=data-log-config]
 
