--- a/docs/de-de/modules/maerkte/partials/limango-faq.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-faq.adoc
@@ -3,10 +3,7 @@ In diesem Kapitel findest du Antworten auf häufig gestellte Fragen.
 
 * <<#faq-checklist, _Checkliste:_ Warum wird meine Variante nicht exportiert?>>
 * <<#faq-errors, Artikelexport: Fehlermeldungen im Log>> +
-  → Nur die betroffenen Varianten werden nicht exportiert.
-* <<#faq-xsd-errors, Artikelexport: XSD-Validierungsfehler im Log>> +
-  → Der gesamte Export wird gestoppt.
-
+  → Die betroffenen Varianten werden nicht exportiert.
 
 [#faq-checklist]
 === _Checkliste:_ Warum wird meine Variante nicht exportiert?
@@ -131,21 +128,9 @@ Prüfe, dass du allen Farbwerten einen Eigenschaftswert zugeordnet hast, die du 
 * Wenn nötig, verknüpfe die Variante mit einem der Eigenschaftswerte, die im Katalog zugeordnet sind.
 --
 
-[#faq-xsd-errors]
-=== Artikelexport: XSD-Validierungsfehler im Log
-
-Bei XSD-Validierungsfehler findet _kein_ Export zu {market} statt. Der gesamte Katalog _wird also nicht an {market} exportiert_. Auch wichtig zu wissen: Der Export wird beim ersten XSD-Validierungsfehler gestoppt. Deshalb gibt es für den Fehler auch nur eine Fehlermeldung im Log. Aber:
-
-* derselbe Fehler kann bei weiteren Varianten auftreten.
-* weitere XSD-Validierungsfehler anderer Art können auftreten.
-
-Beides wird dir aber erst angezeigt, wenn du den ersten XSD-Validierungsfehler behebst und der Export erneut ausgeführt wird.
-
 [.collapseBox]
 .The value has a length of ...; this exceeds the allowed maximum length of ‚80‘.
 --
-
-NOTE: Wenn dieser Fehler auftritt, wird der gesamte Katalog _nicht an {market} exportiert_. Auch wichtig zu wissen: Der Export wird beim ersten XSD-Validierungsfehler gestoppt. Deshalb gibt es auch nur eine Fehlermeldung im Log. Es kann aber sein, dass der Fehler mehrere Varianten betrifft.
 
 *_Problem:_*
 
@@ -161,8 +146,6 @@ NOTE: Wenn dieser Fehler auftritt, wird der gesamte Katalog _nicht an {market} e
 [.collapseBox]
 .EnergyEfficiency’: Missing child element(s). Expected is one of ( {http://schema.limango.de}EnergyLabel, {http://schema.limango.de}DataSheet
 --
-
-NOTE: Wenn dieser Fehler auftritt, wird der gesamte Katalog _nicht an {market} exportiert_. Auch wichtig zu wissen: Der Export wird beim ersten XSD-Validierungsfehler gestoppt. Deshalb gibt es auch nur eine Fehlermeldung im Log. Es kann aber sein, dass der Fehler mehrere Varianten betrifft.
 
 *_Problem:_*
 
@@ -185,8 +168,6 @@ NOTE: Wenn dieser Fehler auftritt, wird der gesamte Katalog _nicht an {market} e
 [.collapseBox]
 .message:„Error 1824: in xml file (Line:467), (Column: 0):Element ‚{http://schema.limango.de}Stock‘: ‚10.25‘ is not a valid value of the atomic type ‚xs:nonNegativeInteger‘ Trigger:„cli: artisan cron:run“
 --
-
-NOTE: Wenn dieser Fehler auftritt, wird der gesamte Katalog _nicht an {market} exportiert_. Auch wichtig zu wissen: Der Export wird beim ersten XSD-Validierungsfehler gestoppt. Deshalb gibt es auch nur eine Fehlermeldung im Log. Es kann aber sein, dass der Fehler mehrere Varianten betrifft.
 
 *_Problem:_*
 
