--- a/docs/de-de/modules/maerkte/partials/catalogue-preview.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-preview.adoc
@@ -8,4 +8,4 @@ Vorschau im Katalog erstellen:
 → Im Fenster *Vorschau* wird eine Vorschau der ersten 5 Produkte des Exports angezeigt.
 . Prüfe die Daten. Wurden die Daten so zugeordnet, wie du es erwartest?
 . *_Optional_*: Klicke auf *Daten herunterladen* (icon:file_download[set=material]). +
-→ Eine Datei mit den ersten 5 Produkten kann auf deinem Rechner gespeichert werden.
+→ Du kannst eine Datei mit den ersten 5 Produkten auf deinem Rechner speichern.
