--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -320,7 +320,8 @@ image::maerkte:limango-age-group.png[]
 
 | Altgeräterücknahme nach ElektroG3
 | * Eigenschaft des Typs *Text* +
-Erlaubter Wert: *DE* +
+Erlaubter Wert: *DE* = Gerät fällt unter ElektroG3.
+
 | Produkt
 
 3+^| Saison
