ADD type uploaded docs

--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -1137,6 +1137,56 @@ Verfügbare Subaktionen für diese Aktion:
 * xref:automatisierung:subaktionen.adoc#230[Notiz zum Auftrag]
 * xref:automatisierung:subaktionen.adoc#270[Sounds]
 
+[#uploaded-docs]
+==== Hochgeladene Dokumente
+
+Mit der Aktion *Hochgeladene Dokumente* können hochgeladene Dokumente deiner Wahl per Subaktion automatisch zum Beispiel gedruckt oder zwischengespeichert werden. Diese Aktion eignet sich für nicht auftragsbezogene Dokumente.
+
+[.subhead]
+Arbeitsschritte
+
+Die Aktion steht für folgende Arbeitsschritte zur Verfügung:
+
+* xref:automatisierung:arbeitsschritte.adoc#auftragsabwicklung[Auftragsabwicklung]
+* xref:automatisierung:arbeitsschritte.adoc#auftragsbearbeitung[Auftragsbearbeitung]
+
+[.subhead]
+Einstellungen
+
+<<table-procedure-uploaded-docs>> erläutert die zusätzlichen Einstellungen der Aktion. Informationen zu den allgemeinen Einstellungen für Aktionen findest du in <<table-procedures-general-settings>>.
+
+[[table-procedure-uploaded-docs]]
+.Aktion *Hochgeladene Dokumente*
+[cols="1,3"]
+|====
+|Einstellung |Erläuterung
+
+| *Alle* (Standardeinstellung)
+|Es werden alle hochgeladenen Dokumente gewählt und an die Subaktion weitergegeben. Momentan können lediglich Dateien im PDF-Format gewählt werden.
+
+| *Auswahl*
+|Wähle die gewünschten Dokumente, für die die Subaktion ausgeführt werden soll. Momentan können lediglich Dateien im PDF-Format gewählt werden.
+
+|====
+
+[.subhead]
+Aktionen für Fehlerfall
+
+Verfügbare Aktionen für den Fehlerfall:
+
+* xref:automatisierung:aktionen.adoc#170[Auftrag]
+* xref:automatisierung:aktionen.adoc#220[E-Mail]
+
+[.subhead]
+Subaktionen
+
+Verfügbare Subaktionen für diese Aktion:
+
+* xref:automatisierung:subaktionen.adoc#180[Drucken]
+* xref:automatisierung:subaktionen.adoc#280[Speichern]
+* xref:automatisierung:subaktionen.adoc#350[Zwischenspeichern]
+* xref:automatisierung:subaktionen.adoc#270[Sounds]
+
 [#270]
 ==== Korrekturbeleg
 
